--- a/outpun.html
+++ b/outpun.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="slate.css" type="text/css" rel="stylesheet">
-        <link href="punstyle.css" type="text/css" rel="stylesheet">
+        <link href="css/slate.css" type="text/css" rel="stylesheet">
+        <link href="css/punstyle.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1 class="subtitle">Puntential puns:</h1>
         <!--this is where you put the results-->
         
-        <center><footer>
+        <center>
         <form class="center" role="search">
             <div class="form-group">
                 <p>Want to try another word?</p>
@@ -16,6 +16,6 @@
             </div>
         <button type="submit" class="btn btn-default">Punch me!</button>
         </form>
-        </center></footer>
+        </center>
         
     </body>
