--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="slate.css" type="text/css" rel="stylesheet">
-    <link href="punstyle.css" type="text/css" rel="stylesheet">
+    <link href="css/slate.css" type="text/css" rel="stylesheet">
+    <link href="css/punstyle.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1 class="title">WELCOME TO THE</h1>
