--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="Search">
             </div>
-            <button type="submit" class="btn btn-default">Punch me!</button>
+            <button type="submit" class="btn btn-default"><a href="outpun.html">Punch me!</a></button>
+            
+            <a href="about.html" class="center" id="about" >About Punderdome</a>
         </form>
         </center>
         
