--- a/outpun.html
+++ b/outpun.html
@@ -14,7 +14,7 @@
                 <p>Want to try another word?</p>
                 <input type="text" class="form-control" placeholder="Search">
             </div>
-        <button type="submit" class="btn btn-default">Punch me!</button>
+            <a href="outpun.html" type = "submit" class="btn btn-default">Punch me!</a>
         </form>
         </center>
         
