search function updated
search function post

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
         <h1 class="title">WELCOME TO THE</h1>
         <h1 class="title">PUNDERDOME</h1>
         <center>
-        <form class="center" role="search">
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <a href="outpun.html" type = "submit" class="btn btn-default">Punch me!</a>
-            
+            <form method="post" class="center" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Pun me!" id="pun_me" name="pun_me">
+                </div>
+                <input type="submit" value="Punch me!" class="btn btn-default" >
+            </form>
             <a href="about.html" class="center" id="about" >About Punderdome</a>
-        </form>
         </center>
         
     </body>
