--- a/outpun.html
+++ b/outpun.html
@@ -9,12 +9,14 @@
         <!--this is where you put the results-->
         
         <center>
-        <form class="center" role="search">
-            <div class="form-group">
+        <form method="post" class="center" role="search">
                 <p>Want to try another word?</p>
-                <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <a href="outpun.html" type = "submit" class="btn btn-default">Punch me!</a>
+            <form method="post" class="center" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Pun me!" id="pun_me" name="pun_me">
+                </div>
+                <input type="submit" value="Punch me!" class="btn btn-default" >
+            </form>
         </form>
         </center>
         
