easter egg added
happy egg

--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
         <center>
             <!-- insert info here-->
             
-            <p class="center">Fan of wordplay? </p>
+            <p class="center_description">Fan of wordplay? Who isn't!</p>
+            <p class="center_description">Enter the Punderdome with a word of your choice and we'll suggest options to statisfy all of your pun needs.</p>
             <a href="index.html" type = "submit" class="btn btn-default">Take me back!</a>
         </center>
         
