I was told to delete this
if we need it back we can pull it back

--- a/eastereggcorn.html
+++ b/eastereggcorn.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <link href="../static/scripts/slate.css" type="text/css" rel="stylesheet">
-        <link href="../static/scripts/punstyle.css" type="text/css" rel="stylesheet">
-        <link href="../static/scripts/animate.css" type="text/css" rel="stylesheet">
+        <link href="slate.css" type="text/css" rel="stylesheet">
+        <link href="punstyle.css" type="text/css" rel="stylesheet">
+        <link href="animate.css" type="text/css" rel="stylesheet">
     </head>
     <body background="eggs.jpg">
         <h1 class="egg animated tada">YOU'VE FOUND THE EASTER EGGCORN</h1>
@@ -14,6 +15,7 @@
                     </div>
                     <input type="submit" value="Egg me!" class="btn btn-default" >
                 </form>
+                <a href="aboutegg.html" class="center animated fadeIn longdelay" id="about">Egg?</a>
             </form>
         </center>
     </body>
