--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="../static/scripts/slate.css" type="text/css" rel="stylesheet">
-    <link href="../static/scripts/punstyle.css" type="text/css" rel="stylesheet">
-    <link href="../static/scripts/animate.css" type="text/css" rel="stylesheet">
+        <link href="slate.css" type="text/css" rel="stylesheet">
+        <link href="punstyle.css" type="text/css" rel="stylesheet">
+        <link href="animate.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1 class="title animated fadeInDown">WELCOME TO THE</h1>
